# campaign_analysis

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile
scripts/: generate_data.py  run_analysis.py
src/: config.py  logger.py  pipeline.py
src/tests/: conftest.py  test_pipeline.py
